# flet-python-bluethoot-app-skeleton

./: .gitignore  README.md  inter_corregida.py  interfaz_PrCo.py  interfaz_PrCo_conDebug.py  pyproject.toml  requirements.txt
Interfaz_diadema/: ViewEXG.py  f_SignalProcFuncLibs.py  libViewEXGBLE.py
android/app/src/main/java/dev/flet/ble/: BleGattBridge.java
scripts/: flet-with-cert.ps1  flet-with-cert.sh  flet_with_ble_gatt.py  sync_ble_gatt_java.sh
src/: android_ble_bridge_meta.py  ble_android_bleak.py  ble_android_gatt.py  ble_android_package.txt  ble_desktop.py  bluetooth_android.py  esp32_sensor.py  fallsense_ui.py  main.py
