[project]
name = "flet-bluetooth-prototype"
version = "0.1.0"
description = "Flet Bluetooth prototype: Flutter BLE bridge + Python parsing (Pyjnius optional)"
requires-python = ">=3.10"
dependencies = [
    "flet>=0.27.1",
    "flet-ble-bridge",
    "bleak>=0.22.0",
    "flet-permission-handler>=0.84.0",
    "certifi>=2024.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[dependency-groups]
dev = [
    "flet-cli>=0.84.0",
]

[tool.uv.sources]
flet-ble-bridge = { path = "packages/flet_ble_bridge", editable = true }

[tool.flet]
product = "FallSense"

[tool.flet.dev_packages]
flet-ble-bridge = "packages/flet_ble_bridge"

[tool.flet.app]
path = "src"
module = "main"

# Splash: `src/assets/splash.png` (e.g. transparent PNG) + solid backgrounds.
# Icons: `src/assets/icon.png` — `flet build` runs flutter_launcher_icons / native splash.
[tool.flet.splash]
color = "#FFFFFF"
dark_color = "#121212"
icon_bgcolor = "#FFFFFF"
icon_dark_bgcolor = "#121212"
web = true
ios = true
android = true

# Override serious_python_android to ARM ABIs only. Skips the x86_64 Python dist
# download (GitHub can time out). Emulator/x86_64 builds need the stock plugin.
[tool.flet.flutter.pubspec.dependency_overrides.serious_python_android]
# Resolved from build/flutter/pubspec.yaml (Flet output dir), not repo root.
path = "../../packages/serious_python_android_arm_only"

[tool.flet.android]
dependencies = [
    "pyjnius",
]
min_sdk_version = 24
adaptive_icon_background = "#FFFFFF"

[tool.flet.android.permission]
"android.permission.BLUETOOTH" = true
"android.permission.BLUETOOTH_ADMIN" = true
"android.permission.BLUETOOTH_CONNECT" = true
"android.permission.BLUETOOTH_SCAN" = true
"android.permission.ACCESS_FINE_LOCATION" = true
